# lingot

./: .gitignore  Cargo.toml  LICENSE  README.md
editors/neovim/ftdetect/: lingot.vim
editors/neovim/syntax/: lingot.vim
editors/vscode/: language-configuration.json  package.json
editors/vscode/syntaxes/: lingot.tmLanguage.json
src/: main.rs
src/error/: report.rs
src/interpreter/: environment.rs  mod.rs  primitives.rs  runtime.rs  value.rs
src/lexer/: mod.rs  scanner.rs  token.rs
src/parser/: ast.rs  parser.rs
src/typechecker/: mod.rs
tests/: full.ling
